force-app/main/default/objects/Lead/fields/Collection_Method__c.field-meta.xml
<CustomField>
    <fullName>Collection_Method__c</fullName>
    <description>리드 수집 경로. 마스터 Picklist_가정 시트 기준</description>
    <inlineHelpText>리드를 처음 알게 된 경로를 선택하세요. 해당 없으면 &apos;기타&apos;.</inlineHelpText>
    <label>수집 방법</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>박람회</fullName>
            </value>
            <value>
                <fullName>웹</fullName>
            </value>
            <value>
                <fullName>소개</fullName>
            </value>
            <value>
                <fullName>전화</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>