force-app/main/default/objects/Lead/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>경쟁 상황</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>