force-app/main/default/objects/Lead/fields/Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>Consent_Date__c</fullName>
    <description>동의 취득일. 개인정보 보유기간 산정 기준일</description>
    <inlineHelpText>동의를 받은 날짜. 동의상태를 &apos;동의&apos;로 바꿀 때 함께 입력하세요.</inlineHelpText>
    <label>동의 일자</label>
    <type>Date</type>
</CustomField>