force-app/main/default/objects/Lead/fields/Decision_Structure__c.field-meta.xml
<CustomField>
    <fullName>Decision_Structure__c</fullName>
    <label>의사결정 구조</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>