force-app/main/default/objects/Lead/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <description>Lead를 부적격으로 종결한 사유. 삭제하지 않고 남겨 같은 고객이 재유입될 때 과거에 왜 떨어졌는지 이력으로 조회한다.</description>
    <inlineHelpText>이 Lead를 부적격 처리하는 구체적 사유를 입력하세요 (예: 프로젝트 규모 미달).</inlineHelpText>
    <label>부적격 사유</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>