force-app/main/default/objects/Lead/fields/Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Amount__c</fullName>
    <inlineHelpText>예상 계약 규모. 확정 전 개략치로 적어도 됩니다.</inlineHelpText>
    <label>예상 규모</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>