force-app/main/default/objects/Lead/fields/Qualification_Result__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Result__c</fullName>
    <inlineHelpText>적격=사업기회 전환 / 부적격=종결 / 보류=재검토 대기</inlineHelpText>
    <label>자격심사 결과</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>적격</fullName>
            </value>
            <value>
                <fullName>부적격</fullName>
            </value>
            <value>
                <fullName>보류</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>