force-app/main/default/objects/Lead/fields/Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Source_Detail__c</fullName>
    <description>수집경로 보조 설명 (박람회명·소개자·캠페인명 등)</description>
    <inlineHelpText>예: 2026 데이터센터엑스포 B홀, 김OO 부장 소개</inlineHelpText>
    <label>출처 상세</label>
    <length>255</length>
    <type>Text</type>
</CustomField>