force-app/main/default/objects/Lead/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <description>리드 시급성. 마스터 Picklist_가정 시트 기준</description>
    <inlineHelpText>고객이 원하는 도입 시점 기준. 3개월 내면 &apos;높음&apos;.</inlineHelpText>
    <label>시급성</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>높음</fullName>
            </value>
            <value>
                <fullName>보통</fullName>
            </value>
            <value>
                <fullName>낮음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>